Mon Mar  6 11:02:07 2000  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_pixbuf.c: Handle drawing transparency without a
	mask correctly.

	* pixmap_theme_main.c pixmap_theme_draw.c: Remove duplicate
	includes.
	
Sun Feb  6 21:34:30 2000  Owen Taylor  <otaylor@redhat.com>

	* Started ChangeLog for pixbuf engine, check sources
	into CVS.

========== ChangeLog for pixmap engine ===================

1999-11-22  Martin Baulig  <martin@home-of-linux.org>

	* pixmap_theme_main.c (theme_duplicate_style): Really copy the
	`src_data->img_list', not just the pointer that points to it.

Tue Oct  5 15:13:29 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c (apply_theme_image): Don't set
	background pixmap on pixmaps.

1999-02-14  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am.in (Makefile.am): Handle the case when
	files are deleted.

Thu Feb 11 21:16:53 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_main.c (theme_data_unref): Free the
	theme data structure as well as the contents.

1999-02-03  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am.in: New file.  Theme/gtk/Makefile.am is
	generated from this file when new *.png files are added.

1999-01-23  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* pixmap_theme_main.c (theme_init): Turn on pixmap cache. 

Mon Jan 18 13:37:23 1999  Owen Taylor  <otaylor@redhat.com>

	* Theme/gtk/gtkrc: Give buttons a gray background
	color so they look a little less funny when initially
	drawing.

Wed Jan 13 18:58:25 1999  Owen Taylor  <otaylor@redhat.com>

	* pixmap_theme_draw.c: Fixed pervasive mis-bracketing
	that was causing drawing if the drawn region and
	clipping region did NOT intersect, and a couple
	of errors in computing source and destination 
	regions.

1998-11-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* pixmap_theme_draw.c: #include <math.h>

1998-11-07  Raja R Harinath  <harinath@cs.umn.edu>

	* Theme/gtk/Makefile.am (theme_DATA): 