@@ -5,10 +5,10 @@ enginedir = $(libdir)/gtk/themes/engines
 engine_LTLIBRARIES = libpixmap.la
 
 libpixmap_la_SOURCES = 		\
-	pixmap_theme_draw.c	\
-	pixmap_theme_main.c	\
-	pixmap_theme_pixbuf.c	\
-	pixmap_theme.h
+	pixbuf-draw.c		\
+	pixbuf-main.c		\
+	pixbuf-render.c		\
+	pixbuf.h
 
 libpixmap_la_LDFLAGS = -module -avoid-version
 libpixmap_la_LIBADD =
